respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Certificacion_de_Proveedor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Razón Social</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Certificacion_de_Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anos_de_experiencia__c</fullName>
        <formula>Account__r.Anos_Experiencia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Años de experiencia</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacitaciones__c</fullName>
        <label>Capacitaciones</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificaciones_R_Control__c</fullName>
        <label>Certificaciones ( R - Control)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificaciones_SUA__c</fullName>
        <label>Certificaciones ( SUA )</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificaciones_Varias__c</fullName>
        <label>Certificaciones ( Varias )</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipo de Caja</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipName>Certificacion_de_Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cuenta_con_bitacoras_de_mantenimiento__c</fullName>
        <label>¿Cuenta con bitacoras de mantenimiento ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_con_monitoreo_propio__c</fullName>
        <label>¿Cuenta con monitoreo propio?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_con_proceso_de_mantenimiento_pre__c</fullName>
        <label>¿Cuenta con proceso de mantenimiento pre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_con_taller_propio__c</fullName>
        <label>¿Cuenta con taller propio?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta_con_unidad_de_rescate__c</fullName>
        <label>¿Cuenta con unidad de rescate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuentan_con_la_aplicacion_Transportista__c</fullName>
        <label>¿Cuentan con la aplicación Transportista</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detallar_proceso_de_monitoreo_y_turnos__c</fullName>
        <label>Detallar proceso de monitoreo y turnos.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_Patios__c</fullName>
        <label>Dirección de Patios</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_oficinas_administrativas__c</fullName>
        <label>Dirección oficinas administrativas</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donde_realiza_sus_mantenimientos__c</fullName>
        <label>¿Dónde realiza sus mantenimientos?</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Examen_antidoping__c</fullName>
        <label>Examen antidoping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_de_Visita__c</fullName>
        <label>Fecha de Visita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modelo_Promedio__c</fullName>
        <label>Modelo (Promedio)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_De_Operadores__c</fullName>
        <label>No. De Operadores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_De_patios__c</fullName>
        <label>No. De patios</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Unidades__c</fullName>
        <label>No. Unidades</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_compana_de_GPS__c</fullName>
        <label>Nombre de la compañía de GPS</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_3_5_Tons__c</fullName>
        <defaultValue>0</defaultValue>
        <label>3.5 Tons</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_CajaSeca_48__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Caja Seca 48&apos;</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_CajaSeca_53__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Caja Seca 53&apos;</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Full_40__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Full 40&apos;</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Modelo3Tons__c</fullName>
        <label>Modelo 3.5 Tons</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloCajSec48__c</fullName>
        <label>Modelo Caja Seca 48&apos;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloCajSec53__c</fullName>
        <label>Modelo Caja Seca 53&apos;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloFull40__c</fullName>
        <label>Modelo Full 40&apos;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloNissan__c</fullName>
        <label>Modelo Nissan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloOtroFuPlana__c</fullName>
        <label>Modelo Otro FULL DE PLANAS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloPlana40EJES__c</fullName>
        <label>Modelo Plana 40&apos; 3 EJES</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloPlana48__c</fullName>
        <label>Modelo Plana 48&apos;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloPlanaOtro__c</fullName>
        <label>Modelo Plana (otro)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloRabon__c</fullName>
        <label>Modelo Rabón</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloTher48__c</fullName>
        <label>Modelo Thermo 48&apos;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloTher53__c</fullName>
        <label>Modelo Thermo 53&apos;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloThorton__c</fullName>
        <label>Modelo Thorton ABIERTO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_ModeloTracto__c</fullName>
        <label>Modelo Tractocamión</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Nissan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nissan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_NoRutasFrecuentes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Número de Rutas Frecuentes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_OtroFULLPLANAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Otro FULL DE PLANAS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Plana_40_3_EJES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plana 40&apos; 3 EJES</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Plana_48__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plana 48&apos;</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Plana_otro__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Plana (otro)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Rabon__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rabón</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Thermo_48__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Thermo 48&apos;</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Thermo_53__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Thermo 53&apos;</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Thorton_ABIERTO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Thorton ABIERTO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2G_CI_Tractocamion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tractocamión</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proceso_de_mantenimiento_preventivo__c</fullName>
        <label>Proceso de mantenimiento preventivo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promedio_de_Antiguedad__c</fullName>
        <label>Promedio de Antigüedad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promedio_de_Experiencia__c</fullName>
        <label>Promedio de Experiencia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origen / Destino</label>
        <referenceTo>Carrier_Line_Load_Point__c</referenceTo>
        <relationshipName>Certificacion_de_Proveedores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ruta_negociada__c</fullName>
        <label>Ruta negociada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_de_rastreo_satelital__c</fullName>
        <label>Sistema de rastreo satelital</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tarifa__c</fullName>
        <label>Tarifa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Unidad__c</fullName>
        <label>Tipo de Unidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tractocamión</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>3.5 Tons</fullName>
                </value>
                <value>
                    <fullName>Rabón</fullName>
                </value>
                <value>
                    <fullName>Thorton ABIERTO</fullName>
                </value>
                <value>
                    <fullName>Plana 40&apos; 3 EJES</fullName>
                </value>
                <value>
                    <fullName>Plana 48&apos;</fullName>
                </value>
                <value>
                    <fullName>Plana (otro)</fullName>
                </value>
                <value>
                    <fullName>Thermo 53&apos;</fullName>
                </value>
                <value>
                    <fullName>Thermo 48&apos;</fullName>
                </value>
                <value>
                    <fullName>Caja Seca 53&apos;</fullName>
                </value>
                <value>
                    <fullName>Caja Seca 48&apos;</fullName>
                </value>
                <value>
                    <fullName>Full 40&apos;</fullName>
                </value>
                <value>
                    <fullName>Otro FULL DE PLANAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volumen__c</fullName>
        <label>Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <label>Certificación de Proveedor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFP-{YY}-{000000}</displayFormat>
        <label>CFP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificacion de Proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>